--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "enzyme-to-json": "^3.1.2",
+    "json-server": "^0.12.0",
     "nock": "^9.0.22",
     "prettier": "^1.7.4",
     "prop-types": "^15.6.0",
