--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-scripts": "1.0.14",
     "redux": "3.6.0",
     "redux-mock-store": "^1.3.0",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.74.2"
   },
   "devDependencies": {
     "enzyme": "^3.1.0",
